Bug 392747 - Adress bar does not update the "Site icon" when "Paste and go" function is used
Summary: Adress bar does not update the "Site icon" when "Paste and go" function is used
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-05 06:00 UTC by The_assassin
Modified: 2018-04-06 16:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description The_assassin 2018-04-05 06:00:04 UTC
When use "Paste and go" function, the "Site icon" is turning on to "Search icon" and still unchanged after site is loaded.
Comment 1 David Rosca 2018-04-06 16:51:05 UTC
Git commit 6dc8624a93c339435be9f4f2c802ac4e4679b1c6 by David Rosca.
Committed on 06/04/2018 at 16:47.
Pushed by drosca into branch 'master'.

LocationBar: Update icon after requesting url load
FIXED-IN: 3.0.1

M  +1    -0    src/lib/navigation/locationbar.cpp

https://commits.kde.org/falkon/6dc8624a93c339435be9f4f2c802ac4e4679b1c6
Comment 2 David Rosca 2018-04-06 16:51:21 UTC
Git commit 19684a73cf12ffb5bc7af3c3502a080fecf4f92c by David Rosca.
Committed on 06/04/2018 at 16:50.
Pushed by drosca into branch 'Falkon/3.0'.

LocationBar: Update icon after requesting url load
FIXED-IN: 3.0.1

M  +1    -0    src/lib/navigation/locationbar.cpp

https://commits.kde.org/falkon/19684a73cf12ffb5bc7af3c3502a080fecf4f92c