LocationBar: Update icon after requesting url load

BUG: 392747
FIXED-IN: 3.0.1